Table now loads data until scrollbar appears if table height is fixed

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -14,8 +14,8 @@ app-table-contracts {
     // comment out all lines for auto width and height
 
     // take up all the available space in parent
-    // width: 100%;
-    // height: 100%;
+    width: 100%;
+    height: 100%;
 
     // fixed dimensions
     // height: 400px;
